# pololu_smc_driver-release

./: CHANGELOG.rst  CMakeLists.txt  debian.store  nodelet_plugins.xml  package.xml  patches.conf  releaser_history.json  rosdoc.yaml  tracks.yaml
cfg/: SMCChannel.py  SMCDriver.py  SMCLimits.py
debian/: changelog  control  gbp.conf  rules
include/pololu_smc_driver/: smc.h  smc_driver.hpp
include/pololu_smc_driver_nodelet/: smc_driver_nodelet.hpp
src/: smc.c  smc_driver.cpp  smc_driver_node.cpp  smc_driver_nodelet.cpp  smc_list.c
udev/: 99-pololu-smc.rules
