<?xml version="1.0"?>
<package>
  <name>pololu_smc_driver</name>
  <version>0.1.7</version>
  <description>A set of ROS tools to provide an interface to the Pololu SMC family of motor controllers.</description>

  <maintainer email="logans@cottsay.net">Scott K Logan</maintainer>
  <maintainer email="matthew.w.richard@gmail.com">Matt Richard</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/pololu_smc_driver</url> -->

  <author email="logans@cottsay.net">Scott K Logan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>driver_base</build_depend>
  <build_depend>libusb-1.0-dev</build_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>driver_base</run_depend>
  <run_depend>libusb-1.0-dev</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    <rosdoc config="${prefix}/rosdoc.yaml" />
  </export>
</package>
